--- a/src/modules/password/recover/PasswordRecover.scss
+++ b/src/modules/password/recover/PasswordRecover.scss
@@ -41,7 +41,7 @@
   }
 
   /* =========================================================
-     🔸 TextFields
+     TextFields
      ========================================================= */
   .MuiTextField-root {
     background-color: #f9fafb;
@@ -81,7 +81,7 @@
   }
 
   /* =========================================================
-     🔸 Botones
+     Botones
      ========================================================= */
   .MuiButton-root {
     width: 100%;
@@ -111,7 +111,7 @@
   }
 
   /* =========================================================
-     🔸 Link volver
+     Link volver
      ========================================================= */
   .MuiTypography-root {
     cursor: pointer;
