--- a/src/modules/password/reset/PasswordReset.scss
+++ b/src/modules/password/reset/PasswordReset.scss
@@ -41,7 +41,7 @@
   }
 
   /* =========================================================
-     🔸 TextField
+     TextField
      ========================================================= */
   .MuiTextField-root {
     background-color: #f9fafb;
@@ -81,7 +81,7 @@
   }
 
   /* =========================================================
-     🔸 Botones
+     Botones
      ========================================================= */
   .MuiButton-root {
     width: 100%;
