--- a/src/components/button/AddButton.scss
+++ b/src/components/button/AddButton.scss
@@ -35,7 +35,7 @@
 
     @include desktop { font-size: 2rem; }
     @include screen-md { font-size: 1.5rem; }
-    @include screen-sm { font-size: 1rem; }
+    @include screen-sm { font-size: 1rem !important; padding: 0.4rem 0.7rem; }
 
     &:hover {
       background-color: #1d4ed8;
