--- a/src/modules/core/aboutus/AboutUs.scss
+++ b/src/modules/core/aboutus/AboutUs.scss
@@ -141,7 +141,7 @@
 
       .service-icon {
         font-size: 2.2rem;
-        color: $blue-color;
+        color: $orange-color;
         margin-bottom: 0.5rem;
       }
 
@@ -165,21 +165,5 @@
     display: flex;
     flex-direction: column;
     gap: 1rem;
-    background-color: $blue-color;
-    color: #fff;
-    border-radius: 8px;
-    padding: 0.7rem 1.5rem;
-    font-weight: bold;
-    border: none;
-    transition: background 0.3s ease;
-
-      &:hover {
-      background-color: #1d4ed8;
-    }
-
-    .aboutUs-link-button {
-      width: 100% !important;
-      margin: 0 auto;
-    }
   }
 }
