--- a/src/modules/core/home/Home.scss
+++ b/src/modules/core/home/Home.scss
@@ -11,11 +11,9 @@
   align-items: start;
   min-height: 100vh;
   background: linear-gradient(180deg, #eef2ff 0%, #f9fafb 100%);
-  padding: 2.5rem 2rem;
+  padding: 2rem 2rem;
 
-  @include screen-sm {
-    padding: 1rem;
-  }
+  @include screen-sm { padding: 1rem 0.5rem; }
 }
 
 .home-content {
@@ -26,11 +24,9 @@
   border-radius: 24px;
   box-shadow: 0 10px 30px rgba(0, 0, 0, 0.08);
   color: #333;
-  padding: 2.5rem;
+  padding: 2rem 2rem;
 
-  @include screen-sm {
-    padding: 1.5rem;
-  }
+  @include screen-sm { padding: 1.5rem 0.5rem; }
 }
 
 /* =========================================================
@@ -54,9 +50,13 @@
     border: none;
     border-radius: 50%;
     font-size: 2rem;
+    font-weight: 600;
     padding: 0.6rem 0.8rem;
     cursor: pointer;
     transition: all 0.3s ease;
+
+    @include screen-md { font-size: 1.5rem !important; }
+    @include screen-sm { font-size: 1.125rem !important; }
 
     &:hover {
       background-color: darken($blue-color, 8%);
@@ -84,7 +84,7 @@
   padding: 0.25rem 0.6rem;
   border-radius: 9999px;
   background-color: #e0f2fe; /* light blue */
-  color: $blue-color; /* primary blue */
+  color: $orange-color; /* primary blue */
   box-shadow: 0 2px 8px rgba(37, 99, 235, 0.12);
   font-style: normal;
   font-size: 0.9rem;
@@ -113,12 +113,16 @@
    TARJETAS DE PROPIEDADES
    ========================================================= */
 .home-grid {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-  gap: 1.5rem;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 2rem;
 }
 
 .home-property-card {
+  width: 30%;
+  display: flex;
+  flex-direction: column;
   background: #fff;
   border: 1px solid #e5e7eb;
   border-radius: 16px;
@@ -126,6 +130,8 @@
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.05);
   transition: all 0.3s ease;
   position: relative;
+
+  @include screen-sm { width: 100%; }
 
   &:hover {
     transform: translateY(-5px);
