--- a/src/modules/property/service/EditProperty.scss
+++ b/src/modules/property/service/EditProperty.scss
@@ -3,7 +3,7 @@
 @import '../../../assets/styles/scss/mixins/fonts';
 
 /* =========================================================
-   🧱 ESTILOS COMPLETOS PARA EditProperty
+   ESTILOS COMPLETOS PARA EditProperty
    ========================================================= */
 
 .editproperty-container {
@@ -12,11 +12,9 @@
   align-items: flex-start;
   min-height: 100vh;
   background-color: #f6f8fb;
-  padding: 3rem 1rem;
+  padding: 2rem 2rem;
 
-  @include screen-sm {
-    padding: 3rem 0.5rem;
-  }
+  @include screen-sm { padding: 1rem 0.5rem; }
 }
 
 .editproperty-card {
