--- a/src/modules/property/service/EditProperty.scss
+++ b/src/modules/property/service/EditProperty.scss
@@ -219,12 +219,14 @@
 /* =========================================================
    HISTORIAL (Trazas)
    ========================================================= */
-.trace-wrapper {
+.editproperty-trace-wrapper {
   margin-bottom: 1.5rem;
   padding: 1rem 1rem 1.5rem;
   background-color: #f9fafb;
   border-radius: 12px;
   box-shadow: 0 4px 15px rgba(0, 0, 0, 0.05);
+
+   @include screen-sm { padding: 0.1rem 0.1rem 1.5rem; }
 }
 
 .trace-grid {
