--- a/src/components/pagination/Pagination.scss
+++ b/src/components/pagination/Pagination.scss
@@ -7,9 +7,10 @@
   justify-content: center;
   align-items: center;
   gap: 1rem;
-  margin-top: 2rem;
   font-family: $primary-font;
   color: #374151;
+  margin-top: 2rem;
+  margin-bottom: 1.5rem;
 }
 
 .pagination__btn {
