--- a/src/components/search/Search.scss
+++ b/src/components/search/Search.scss
@@ -5,7 +5,9 @@
 .searchbar {
   width: 100%;
   max-width: 1100px;
-  margin: 0 auto;
+  margin-bottom: 1.5rem;
+
+  @include screen-sm { margin-bottom: 0.125rem; }
 }
 
 // botón mobile
@@ -263,7 +265,7 @@
   .searchbar-actions { justify-content: center; }
 }
 
-@include screen-sm {
+@include screen-md {
   .searchbar-toggle {
     justify-content: center;
     text-align: center;
