--- a/src/modules/auth/login/Login.scss
+++ b/src/modules/auth/login/Login.scss
@@ -70,9 +70,9 @@
       }
     }
 
-    // Íconos azul institucional
+    // Íconos naranjas
     .MuiInputAdornment-root svg {
-      color: $blue-color !important;
+      color: $orange-color !important;
       transition: color 0.2s ease-in-out;
     }
   }
