--- a/src/modules/core/aboutus/AboutUs.scss
+++ b/src/modules/core/aboutus/AboutUs.scss
@@ -90,7 +90,7 @@
         transition: background-color 0.3s;
 
         &.active {
-          background-color: $blue-color;
+          background-color: $orange-color;
         }
       }
     }
