--- a/src/modules/auth/register/Register.scss
+++ b/src/modules/auth/register/Register.scss
@@ -70,9 +70,9 @@
       }
     }
 
-    /* ICONOS AZULES INSTITUCIONALES */
+    //Iconos naranjas
     .MuiInputAdornment-root svg {
-      color: $blue-color !important;
+      color: $orange-color !important;
       transition: color 0.2s ease-in-out;
     }
 
