--- a/src/modules/auth/register/Register.scss
+++ b/src/modules/auth/register/Register.scss
@@ -95,9 +95,7 @@
     &.MuiButton-containedPrimary {
       background-color: $blue-color;
 
-      &:hover {
-        background-color: #1d4ed8;
-      }
+      &:hover { background-color: #1d4ed8; }
     }
 
     &.MuiButton-outlinedSecondary {
@@ -105,7 +103,7 @@
       color: #333;
 
       &:hover {
-        background-color: #f3f4f6;
+        background-color: #d1d5db;
       }
     }
   }
