--- a/src/modules/core/home/Home.scss
+++ b/src/modules/core/home/Home.scss
@@ -90,7 +90,7 @@
   gap: 0.4rem;
   padding: 0.35rem 0.7rem;
   border-radius: 9999px;
-  background-color: #e0f2fe;
+  background-color: #e9e9e9;
   color: $orange-color;
   box-shadow: 0 2px 8px rgba(37, 99, 235, 0.12);
   font-style: normal;
