--- a/src/modules/core/index/Index.scss
+++ b/src/modules/core/index/Index.scss
@@ -9,6 +9,8 @@
   min-height: 90vh;
   background: #f6f8fb;
   padding: 2rem 2rem;
+  transition: all 0.3s ease;
+  
   @include screen-sm { padding: 1rem 0.5rem; }
 }
 
@@ -24,19 +26,7 @@
   @include screen-sm { padding: 1.5rem 0.5rem; }
 }
 
-.index-header {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-bottom: 2rem;
-  h1 {
-    font-family: $primary-font;
-    color: $blue-color;
-    font-size: 2.2rem;
-  }
-}
-
-/* ===== GRID CARDS ===== */
+/* GRID CARDS */
 .index-grid {
   display: flex;
   flex-wrap: wrap;
